# L2CopyAndMove

./: .gitignore  CMakeLists.txt
include/: Node.h  auxiliary.h  node_operators.h
src/: CMakeLists.txt  Node.h  TestNode.cpp  node_operators.h
test/: CMakeLists.txt
